--- a/pages/posts/slug.module.css
+++ b/pages/posts/slug.module.css
@@ -7,13 +7,13 @@
 }
 
 .header {
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .image {
     width: 15rem;
     height: auto;
-    margin: 0 auto;
 }
 
 .article {
