--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,21 +1,23 @@
-.listItem {
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    display: flex;
-    margin: 0 0 1.25rem;
-}
-
-.thumbnail {
-    width: 10rem;
-    height: auto;
-}
-
-.line {
-    display: flex;
-}
+.listItem {}
 
 .title {
     margin: 1rem;
+}
+
+@media (min-width: 770px) {
+    .thumbnail {
+        width: 10rem;
+        height: auto;
+    }
+    .listItem {
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        margin: 0 0 1.25rem;
+    }
+    .line {
+        display: flex;
+    }
 }
