--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,14 @@
 html,
 body {
-    padding: 0;
     margin: 0;
+    height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     line-height: 1.6;
     font-size: 18px;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
 }
 
 * {
@@ -12,7 +16,7 @@ body {
 }
 
 a {
-    color: #0070f3;
+    color: #000;
     text-decoration: none;
 }
 
@@ -25,9 +29,16 @@ img {
     display: block;
 }
 
-.hljs {
-    display: block;
-    padding: .5em;
-    border: 3px solid;
-    border-color: #000;
+.section {
+    margin: 0 auto 0;
+    padding: 0 1%;
+    max-width: 36rem;
+    height: 100%;
 }
+
+.header {
+    font-size: 2rem;
+    text-align: center;
+}
+
+.container { }
