--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,21 @@
 
 {% block content %}
 
-<h1>latest posts</h1>
+<h1 class="title">latest posts</h1>
 <ul>
 	{% set posts = get_section(path="posts/_index.md") %}
 	{% for page in posts.pages | sort(attribute="date")| reverse | slice(end=4) %}
-	<li>
-		<a href="{{ page.permalink | safe }}">{{ page.title }}</a>
-		<small>[{{ page.date }}]</small>
-	</li>
+  <li>
+		<p>
+			<a href="{{ page.permalink | safe }}">{{ page.title }}</a>
+			<span class="mini">[{{ page.date }}]</span>
+		</p>
+  </li>
 	{% endfor %}
-	<li><a href="/posts/">...</a></li>
+	<li><p><a href="/posts/">...</a></p></li>
 </ul>
 
-<h1>social networks</h1>
+<h1 class="title">social networks</h1>
 <ul>
   {% for sns in config.extra.sns %}
   <li>
@@ -23,6 +25,6 @@
   {% endfor %}
 </ul>
 
-<h1>about me</h1>
+<h1 class="title">about me</h1>
 <a href="/about/">here</a>
 {% endblock content %}
