--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,7 @@
 <h1 class="title">
   {{ page.title }}
 </h1>
-<p class="subtitle"><strong>{{ page.date }}</strong></p>
+<p><strong>{{ page.date }}</strong></p>
 {{ page.content | safe }}
 <hr>
 <small class="bottom"><a href="/posts/">all posts</a></small>
