--- a/templates/post.html
+++ b/templates/post.html
@@ -4,8 +4,25 @@
 <h1 class="title">
   {{ page.title }}
 </h1>
-<p><strong>{{ page.date }}</strong></p>
-{{ page.content | safe }}
+<p>date: <strong>{{ page.date }}</strong></p>
+{% if page.taxonomies.tags %}
+<div class="tagline">
+  <p>tags:</p> 
+  <ul>
+    {% for tag in page.taxonomies.tags %}
+    <li>
+      <p>
+        <strong>
+          <a href="{{ get_taxonomy_url(kind="tags", name=tag) | safe }}">{{ tag }}</a>
+        </strong>
+      </p>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
+{% endif %}
 <hr>
-<small class="bottom"><a href="/posts/">all posts</a></small>
+
+{{ page.content | safe }}
+
 {% endblock content %}
