--- a/templates/index.html
+++ b/templates/index.html
@@ -28,4 +28,8 @@
 <h1 class="title">about me</h1>
 <a href="/about/">here</a>
 
+<h1 class="title">motoko playground</h1>
+<div class='editor'><pre id="editor" class="motoko" contenteditable="plaintext-only" spellcheck="false"><code class="language-motoko" data-lang="motoko">import Debug "mo:base/Debug";
+Debug.print("Hello Motoko!");</code></pre></div>
+
 {% endblock content %}
