--- a/templates/base.html
+++ b/templates/base.html
@@ -24,40 +24,19 @@
   </section>
 </body>
 
-<script src="/js/run_motoko_repl.js"></script>
+<script async src="https://download.dfinity.systems/motoko/{{ config.extra.motoko_repl.motoko_version }}/js/moc-interpreter-{{ config.extra.motoko_repl.motoko_version }}.js"></script>
 
-<script type="text/javascript">
-async function addPackage(name, repo, version, dir) {
-  const meta_url = `https://data.jsdelivr.com/v1/package/gh/${repo}@${version}/flat`;
-  const base_url = `https://cdn.jsdelivr.net/gh/${repo}@${version}`;
-  const response = await fetch(meta_url);
-  const json = await response.json()
-  const promises = [];
-  const fetchedFiles = [];
-  for (const f of json.files) {
-    if (f.name.startsWith(`/${dir}/`) && /\.mo$/.test(f.name)) {
-      const promise = (async () => {
-        const content = await (await fetch(base_url + f.name)).text();
-        const stripped = name + f.name.slice(dir.length + 1);
-        fetchedFiles.push(stripped);
-        Motoko.saveFile(stripped, content);
-      })();
-      promises.push(promise);
-    }
-  }
+<script type="module">
+  import { addPackage } from '/js/runMotokoRepl.bundle.js';
 
-  Promise.all(promises).then(() => {
-    Motoko.addPackage(name, name + '/');
-    console.log(`Loaded motoko library "${name}"`);
-    changeCodeBlock();
-  });
-}
-
-function loadBase() {
-  addPackage('base', 'dfinity/motoko-base', '{{ config.extra.motoko_repl.motoko_base_tag }}', 'src');
-}
+  await addPackage(
+    "base",
+    "dfinity/motoko-base",
+    "{{ config.extra.motoko_repl.motoko_base_tag }}",
+    "src",
+    document.getElementsByTagName("pre"),
+    Motoko,
+  );
 </script>
-
-<script async src="https://download.dfinity.systems/motoko/{{ config.extra.motoko_repl.motoko_version }}/js/moc-interpreter-{{ config.extra.motoko_repl.motoko_version }}.js" onload="loadBase()"></script>
 
 </html>
