--- a/templates/base.html
+++ b/templates/base.html
@@ -27,16 +27,17 @@
 <script async src="https://download.dfinity.systems/motoko/{{ config.extra.motoko_repl.motoko_version }}/js/moc-interpreter-{{ config.extra.motoko_repl.motoko_version }}.js"></script>
 
 <script type="module">
-  import { addPackage } from '/js/runMotokoRepl.bundle.js';
+  import { addPackage, changeCodeBlock } from '/js/runMotokoRepl.bundle.js';
 
   await addPackage(
     "base",
     "dfinity/motoko-base",
     "{{ config.extra.motoko_repl.motoko_base_tag }}",
     "src",
-    document.getElementsByTagName("pre"),
     Motoko,
   );
+
+  changeCodeBlock(document.getElementsByTagName("pre"), Motoko);
 </script>
 
 </html>
