--- a/sass/style.scss
+++ b/sass/style.scss
@@ -65,6 +65,10 @@ img {
     }
 }
 
+.container {
+    padding-bottom: 1rem;
+}
+
 .run-motoko {
     display: flex;
     justify-content: space-between;
