--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,15 @@
   <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ config.title }}</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DCD8NNP6WF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-DCD8NNP6WF');
+  </script>
 </head>
 
 <body>
